--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Index - DevFolio Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Arjun Santhosh E N's personal portfolio featuring web develpment studied in St. Joseph's College of Engineering and Technology, Palai" name="description">
+  <meta content="Arjun Santhosh E N, arjun santhosh e n, portfolio, st. joseph college, St. Joseph's College of Engineering and Technology, Palai" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
