--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - DevFolio Bootstrap Template</title>
+  <title>Arjun Santhosh - E N</title>
   <meta content="Arjun Santhosh E N's personal portfolio featuring web develpment studied in St. Joseph's College of Engineering and Technology, Palai" name="description">
   <meta content="Arjun Santhosh E N, arjun santhosh e n, portfolio, st. joseph college, St. Joseph's College of Engineering and Technology, Palai" name="keywords">
 
