--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">PorFolio</h1>
+        <h1 class="sitename">PortFolio</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -87,8 +87,8 @@
               <div class="col-lg-7 about-info">
                 <p><strong>Name: </strong> <span>Arjun Santhosh EN</span></p>
                 <p><strong>Profile: </strong> <span>Developer</span></p>
-                <p><strong>Email: </strong> <span>a@gmail.com</span></p>
-                <p><strong>Phone: </strong> <span>(+91) 98</span></p>
+                <p><strong>Email: </strong> <span>arjunsanthoshenxthb@gmail.com</span></p>
+                <p><strong>Phone: </strong> <span>(+91) 9876 5432 10</span></p>
               </div>
             </div>
 
@@ -132,10 +132,10 @@
               <h4>About me</h4>
               <p>
                 Hi! I'm Arjun Santhosh E N, a tech enthusiast from Kerala, India.
-                 With a background in electronics and communication engineering, I enjoy bringing new products to life using C/C++, Python, and HTML.
+                 With a background in Computer Science engineering, I enjoy bringing new products to life using C/C++, Python, and HTML.
               </p>
               <p>
-                I've interned in ERP Application Development with Odoo (Python) and worked on IoT projects with sensors, Arduino, and communication modules.
+                I've interested in Python and worked on IoT projects with sensors, Arduino, and communication modules.
                  These experiences have sharpened my problem-solving skills and deepened my tech knowledge.
               </p>
             </div>
@@ -176,7 +176,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>+91 9895 0591 75</p>
+                  <p>+91 9876 5432 10</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
@@ -186,7 +186,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>athulsanthoshen750@gmail.com</p>
+                  <p>arjunsanthoshenxthb@gmail.com</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
@@ -207,7 +207,7 @@
         <a href="https://twitter.com/ArjunAthul"><i class="bi bi-twitter-x"></i></a>
         <a href="https://www.facebook.com/athul.santhosh.90"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/athul_santhosh_e_n?igsh=MXVxYWNibnM1eWw5ZA=="><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/athul-santhosh-e-n"><i class="bi bi-linkedin"></i></a>
+        <a href="https://in.linkedin.com/in/arjun-santhosh-e-n-806b05263"><i class="bi bi-linkedin"></i></a>
       </div>
     </div>
 
