--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <p><strong>Name: </strong> <span>Arjun Santhosh EN</span></p>
                 <p><strong>Profile: </strong> <span>Developer</span></p>
                 <p><strong>Email: </strong> <span>arjunsanthoshenxthb@gmail.com</span></p>
-                <p><strong>Phone: </strong> <span>(+91) 9876 5432 10</span></p>
+                <p><strong>Phone: </strong> <span>(+91) 8891 3237 47</span></p>
               </div>
             </div>
 
@@ -176,7 +176,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>+91 9876 5432 10</p>
+                  <p>+91 8891 3237 47</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
@@ -204,9 +204,9 @@
 
     <div class="container">
       <div class="social-links d-flex justify-content-center">
-        <a href="https://twitter.com/ArjunAthul"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.facebook.com/athul.santhosh.90"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/athul_santhosh_e_n?igsh=MXVxYWNibnM1eWw5ZA=="><i class="bi bi-instagram"></i></a>
+        <a href="https://twitter.com/_Arjunkannan"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100009100364429&name=STSDirectNavUserDecorator"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/_arjun__kannan_?igsh=Z3U0eHBqdTg4dzUw"><i class="bi bi-instagram"></i></a>
         <a href="https://in.linkedin.com/in/arjun-santhosh-e-n-806b05263"><i class="bi bi-linkedin"></i></a>
       </div>
     </div>
