--- a/index.html
+++ b/index.html
@@ -131,12 +131,15 @@
             <div class="about-me">
               <h4>About me</h4>
               <p>
-                Hi! I'm Arjun Santhosh E N, a tech enthusiast from Kerala, India.
-                 With a background in Computer Science engineering, I enjoy bringing new products to life using C/C++, Python, and HTML.
+                I'm Arjun Santhosh E N, a passionate tech enthusiast from Kerala, India, currently pursuing a degree in Computer Science Engineering. 
+                I thrive on the challenge of bringing new ideas to life, leveraging my skills in C/C++, Python, and HTML.
               </p>
               <p>
-                I've interested in Python and worked on IoT projects with sensors, Arduino, and communication modules.
-                 These experiences have sharpened my problem-solving skills and deepened my tech knowledge.
+               My interests particularly lie in Python, where I've had the opportunity to work on IoT projects involving sensors, Arduino, and communication modules. 
+                These hands-on experiences have not only enhanced my problem-solving abilities but have also deepened my understanding of technology.
+              </p>
+              <p>
+               I'm always eager to learn and innovate, constantly seeking opportunities to grow and contribute to the tech world.
               </p>
             </div>
           </div>
